<resources>
    <string name="app_name">RobutEV3 - Android Demo</string>
    <string name="Device_icon">Device icon</string>
    <string name="Name">Name</string>
    <string name="MAC_Address">MAC Address</string>
    <string name="USB_Host_Mode">USB Host Mode</string>
    <string name="Ignore_non_EV3_Bluetooth_devices">Ignore non-EV3 Bluetooth devices</string>
    <string name="Bluetooth_is_not_supported_on_this_device">Bluetooth is not supported on this device</string>
    <string name="Bluetooth_is_not_enabled">Bluetooth is not enabled</string>
    <string name="Connected">Connected</string>
    <string name="Connecting">Connecting …</string>
    <string name="Started">Started</string>
    <string name="Starting">Starting …</string>
    <string name="Could_not_connect">Could not connect</string>
    <string name="Connection_broken">Connection broken</string>
    <string name="Failed">Failed</string>
    <string name="Beep">Beep</string>
    <string name="Play">Play</string>
    <string name="Distance_measured_by_ultrasonic">Distance measured by ultrasonic …</string>
    <string name="Ultrasonic_distance">Ultrasonic distance: %1$d %2$s</string>
    <string name="Color_sensed_by_color_sensor">Color sensed by color sensor …</string>
    <string name="Color_sensed">Color sensed: %1$s</string>

    <string name="title_activity_control">ControlActivity</string>
    <string name="Brick_info">Brick info</string>
    <string name="Motors">Motors</string>
    <string name="Tank">Tank</string>
    <string name="Sound">Sound</string>
    <string name="Ultrasonic">Ultrasonic</string>
    <string name="Poll">Poll</string>
    <string name="Listen">Listen</string>
    <string name="Automatic_polling">Automatic polling</string>
    <string name="Listening_to_ultrasonic_at_port">Listening to ultrasonic at port %1$s …</string>
    <string name="Stopped_listening_to_ultrasonic">Stopped listening to ultrasonic …</string>
    <string name="Listening_to_color_at_port">Listening to color at port %1$s …</string>
    <string name="Stopped_listening_to_color">Stopped listening to color …</string>

    <string name="Port_1">Port 1</string>
    <string name="Port_2">Port 2</string>
    <string name="Port_3">Port 3</string>
    <string name="Port_4">Port 4</string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="Lock_ports_B_and_C">Lock ports B and C</string>
    <string name="MinPower">-100</string>
    <string name="MaxPower">+100</string>
    <string name="Zero">0</string>

    <string name="Do">Do</string>
    <string name="Re">Re</string>
    <string name="Mi">Mi</string>
    <string name="Fa">Fa</string>
    <string name="Sol">Sol</string>
    <string name="La">La</string>
    <string name="Ti">Ti</string>
    <string name="Do_P">Do\'</string>

    <string name="Select_mode">Select mode</string>
    <string name="Centimeters">Centimeters</string>
    <string name="Inches">Inches</string>
    <string name="Color">Color</string>
    <string name="Reflected_light">Reflected light</string>
    <string name="Ambient_light">Ambient light</string>

    <string name="Select_a_port">Select a port</string>
    <string name="Forward">Forward</string>
    <string name="Backward">Backward</string>
    <string name="Stop">Stop</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>

</resources>
