<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/device_list_item_icon"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Device_icon" />

    <TextView
        android:id="@+id/device_list_item_name"
        android:text="@string/Name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/device_list_item_icon"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/device_list_item_address"
        android:text="@string/MAC_Address"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_below="@id/device_list_item_name"
        android:layout_toStartOf="@id/device_list_item_icon"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>