<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UltrasonicFragment">

    <TextView
        android:id="@+id/color_label_1"
        android:padding="10dp"
        android:text="@string/Select_a_port"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bordered_background_square"
        app:layout_constraintTop_toBottomOf="@+id/color_label_1">

        <RadioButton
            android:id="@+id/color_radio_button_port_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Port_1" />

        <RadioButton
            android:id="@+id/color_radio_button_port_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Port_2" />

        <RadioButton
            android:id="@+id/color_radio_button_port_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Port_3" />

        <RadioButton
            android:id="@+id/color_radio_button_port_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Port_4" />

    </RadioGroup>

    <TextView
        android:id="@+id/color_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Select_mode"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bordered_background_square"
        app:layout_constraintTop_toBottomOf="@+id/color_label_2">

        <RadioButton
            android:id="@+id/color_radio_button_mode_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Color" />

        <RadioButton
            android:id="@+id/color_radio_button_mode_reflected_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Reflected_light" />

        <RadioButton
            android:id="@+id/color_radio_button_mode_ambient_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Ambient_light" />

    </RadioGroup>

    <TextView
        android:id="@+id/color_text_view"
        android:text="@string/Color_sensed_by_color_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:background="@drawable/bordered_background"
        android:padding="10dp"
        android:maxLines="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:text="@string/Color_sensed_by_color_sensor"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:background="@drawable/bordered_background"
        android:maxLines="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_text_view">

        <ImageView
            android:background="@drawable/noise_background"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@android:string/unknownName" />

        <TextView
            android:text="@android:string/unknownName"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <View
            android:id="@+id/color_color_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/color_button_poll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Poll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ToggleButton
        android:id="@+id/color_toggle_button_listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Automatic_polling"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/color_toggle_button_listen"
        app:layout_constraintEnd_toStartOf="@+id/color_toggle_button_listen"
        app:layout_constraintTop_toTopOf="@+id/color_toggle_button_listen" />

</androidx.constraintlayout.widget.ConstraintLayout>