<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_panel"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/usbHostModeCheckBox"
            android:text="@string/USB_Host_Mode"
            android:checked="true"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ignoreNonEv3Bluetooth"
            android:text="@string/Ignore_non_EV3_Bluetooth_devices"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bluetoothNotSupported"
            android:text="@string/Bluetooth_is_not_supported_on_this_device"
            android:textColor="#f00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bluetoothNotEnabled"
            android:text="@string/Bluetooth_is_not_enabled"
            android:textColor="#f00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <ListView
        android:id="@+id/devicesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintTop_toBottomOf="@+id/main_panel" />

</androidx.constraintlayout.widget.ConstraintLayout>