<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UltrasonicFragment">

    <TextView
        android:id="@+id/ultrasonic_text_view"
        android:text="@string/Distance_measured_by_ultrasonic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/ultrasonic_port_selector_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toTopOf="@+id/ultrasonic_text_view" />

    <Button
        android:id="@+id/ultrasonic_button_poll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Poll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ultrasonic_toggle_button_listen"
        app:layout_constraintTop_toBottomOf="@id/ultrasonic_text_view" />

    <ToggleButton
        android:id="@+id/ultrasonic_toggle_button_listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Listen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ultrasonic_button_poll"
        app:layout_constraintTop_toBottomOf="@id/ultrasonic_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>