<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SoundFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/beepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Beep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/horizontalLine1"
            layout="@layout/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/beepButton" />

        <TextView
            android:id="@+id/frequencyTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:text="1000 Hz"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalLine1" />

        <SeekBar
            android:id="@+id/frequencySeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="175"
            android:padding="20dp"
            android:progress="26"
            app:layout_constraintBottom_toBottomOf="@+id/frequencyTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/frequencyTextView"
            app:layout_constraintTop_toTopOf="@+id/frequencyTextView"
            />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:text="1000 ms"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequencyTextView" />

        <SeekBar
            android:id="@+id/durationSeekBar"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:max="300"
            android:padding="20dp"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/durationTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/durationTextView"
            app:layout_constraintTop_toTopOf="@+id/durationTextView"
            />

        <TextView
            android:id="@+id/volumeTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:text="100%"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/durationTextView"
            />

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:padding="20dp"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/volumeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/volumeTextView"
            app:layout_constraintTop_toTopOf="@+id/volumeTextView"
            />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/volumeSeekBar" />

        <View
            android:id="@+id/horizontalLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <LinearLayout
            android:id="@+id/notesLinearLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/horizontalLine2"
            tools:layout_editor_absoluteX="20dp">

            <Button
                android:id="@+id/buttonDo"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Do" />

            <Button
                android:id="@+id/buttonRe"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Re" />

            <Button
                android:id="@+id/buttonMi"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Mi" />

            <Button
                android:id="@+id/buttonFa"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Fa" />

            <Button
                android:id="@+id/buttonSol"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Sol" />

            <Button
                android:id="@+id/buttonLa"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/La" />

            <Button
                android:id="@+id/buttonTi"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Ti" />

            <Button
                android:id="@+id/buttonDo_P"
                style="?android:attr/buttonBarButtonStyle"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/Do_P" />

        </LinearLayout>

        <View
            android:id="@+id/horizontalLine3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/notesLinearLayout"
            />

        <Spinner
            android:id="@+id/spinnerSoundFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/horizontalLine3" />

        <Button
            android:id="@+id/buttonPlayFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSoundFile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>