<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MotorsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <robutev3.android.demo.DividerWithText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/A"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/portASeekBar"
                android:max="21"
                android:progress="11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp" />

            <include layout="@layout/seek_bar_range"/>

            <include layout="@layout/horizontal_line"/>

            <robutev3.android.demo.DividerWithText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/B"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/portBSeekBar"
                android:max="21"
                android:progress="11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp" />

            <include layout="@layout/seek_bar_range"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:background="@color/colorAccent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"/>

                <Switch
                    android:id="@+id/lockPortsBandC"
                    android:text="@string/Lock_ports_B_and_C"
                    android:textColor="@color/colorAccent"
                    android:switchPadding="4dp"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:background="@color/colorAccent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"/>

            </LinearLayout>

            <robutev3.android.demo.DividerWithText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/C"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/portCSeekBar"
                android:max="21"
                android:progress="11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp" />

            <include layout="@layout/seek_bar_range"/>

            <include layout="@layout/horizontal_line"/>

            <robutev3.android.demo.DividerWithText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/D"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/portDSeekBar"
                android:max="21"
                android:progress="11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp" />

            <include layout="@layout/seek_bar_range"/>

            <include layout="@layout/horizontal_line"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>